--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,11 +10,14 @@
     %meta{'name' => 'description', 'content' => t('app_description')}
     %meta{'name' => 'viewport', 'content' => 'width=device-width, initial-scale=1'}
 
-    = stylesheet_link_tag 'default', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'default', 'data-turbolinks-track' => true
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
+    = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = javascript_include_tag 'modernizr'
     = csrf_meta_tags
 
   %body
+
+    - flash.each do |key, value|
+      =content_tag :div, content_tag(:p, value), id: "#{key}" unless value.blank?
 
     = yield
